--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "react-use": "^17.4.0"
   },
   "devDependencies": {
+    "@types/buble": "^0.20.1",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-pdf": "^6.2.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
